# web-manager-2021

./: .gitignore  .prettierignore  404.html  Makefile  deploy.sh  index.html  mkdocs.yml
.github/workflows/: deploy.yml  test.yml
api/: index.html
development/: index.html
docs/: api.md  development.md  implementation.md  index.md  web-components.md
e2e/: package-lock.json  package.json
e2e/cypress/integration/: login.spec.js  login.test.js
implementation/: index.html
python/: .dockerignore  Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml  run_e2e.py  tox.ini
python/app/: dependencies.py  main.py  settings.py
python/app/jinja2/: filters.py
python/app/models/: proposal.py  proposal_model.py  pydantic.py
python/app/routers/: api.py  views.py
python/app/service/: block.py  proposal.py  user.py
python/app/util/: auth.py  database.py  permission.py  role.py
python/static/css/: global.css  login.css
python/static/js/: salt-block-view.js  salt-loading-spinner.js
python/templates/: base.html  home.html  login.html  proposal.html
python/tests/: clean_test_database.py  conftest.py  create_test_database.py  markers.py  sdb_sensitive.py  test_dependencies.py  test_home.py  test_pydantic.py  update_permissions.py  update_test_database.py  util.py
python/tests/__testdata__/proposals/2020-2-SCI-065/Included/: Block-abcd1234-2020-1.xml  Block-abcd1234-2020-2.xml
python/tests/jinja2/: test_filters.py
python/tests/models/: test_pydantic.py
python/tests/routers/: test_api.py  test_api_block.py  test_views.py  test_views_proposal.py
python/tests/service/: test_block.py  test_proposal.py  test_user.py
python/tests/service/__snapshots__/: test_block.ambr
python/tests/util/: test_auth.py  test_database.py  test_permission.py  test_role.py
search/: search_index.json
